Download action added

--- a/src/app/navigation-pane/navigation-pane.component.html
+++ b/src/app/navigation-pane/navigation-pane.component.html
@@ -2,14 +2,14 @@
   <div class="bookmarks">
     <div class="bookmark-header">FILES</div>
     <div class="bookmark-body">
-      <div class="bookmark">
-        <a href="">All Files</a>
+      <div class="bookmark" (click)="allFiles()">
+        All Files
       </div>
-      <div class="bookmark"><a href="">Images</a></div>
-      <div class="bookmark"><a href="">Documents</a></div>
-      <div class="bookmark"><a href="">Video</a></div>
-      <div class="bookmark"><a href="">Music</a></div>
-      <div class="bookmark"><a href="">Others</a></div>
+      <div class="bookmark" (click)="images()">Images</div>
+      <div class="bookmark" (click)="documents()">Documents</div>
+      <div class="bookmark" (click)="video()">Video</div>
+      <div class="bookmark" (click)="music()">Music</div>
+      <div class="bookmark" (click)="others()">Others</div>
     </div>
   </div>
 </div>
